# task

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Makefile  README.md  resources.md
.github/: CODEOWNERS
.github/workflows/: ci_tests.yml
docs/: Makefile  P3552-lazy.md  P3552-task.md  c++now.md  contributing.md  examples.md  resources.md
examples/: CMakeLists.txt  affinity.cpp  alloc.cpp  any_scheduler.cpp  async-lock.cpp  c++now-affinity.cpp  c++now-allocator.cpp  c++now-basic.cpp  c++now-cancel.cpp  c++now-errors.cpp  c++now-query.cpp  c++now-result-types.cpp  c++now-return.cpp  c++now-stop_token.cpp  c++now-with_error.cpp  co_await-result.cpp  co_await-task.cpp  container.cpp  demo-scope.hpp  demo-thread_pool.hpp  environment.cpp  error.cpp  escaped-exception.cpp  friendly.cpp  hello.cpp  into_optional.cpp  loop.cpp  query.cpp  result_example.cpp  stop.cpp
include/beman/lazy/: lazy.hpp  task.hpp
include/beman/lazy/detail/: allocator.hpp  allocator_of.hpp  allocator_support.hpp  any_scheduler.hpp  completion.hpp  error_types_of.hpp  final_awaiter.hpp  find_allocator.hpp  handle.hpp  inline_scheduler.hpp  into_optional.hpp  lazy.hpp  poly.hpp  promise_base.hpp  promise_type.hpp  result_type.hpp  scheduler_of.hpp  state_base.hpp  stop_source.hpp  sub_visit.hpp  task.hpp  with_error.hpp
include/beman/task/: task.hpp
include/beman/task/detail/: affine_on.hpp  allocator_of.hpp  allocator_support.hpp  any_scheduler.hpp  awaiter.hpp  change_coroutine_scheduler.hpp  completion.hpp  error_types_of.hpp  final_awaiter.hpp  find_allocator.hpp  handle.hpp  inline_scheduler.hpp  into_optional.hpp  poly.hpp  promise_base.hpp  promise_env.hpp  promise_type.hpp  result_type.hpp  scheduler_of.hpp  single_thread_context.hpp  state.hpp  state_base.hpp  stop_source.hpp  sub_visit.hpp  task.hpp  task_scheduler.hpp  with_error.hpp
src/beman/lazy/: CMakeLists.txt  lazy.cpp  task.cpp
src/beman/task/: CMakeLists.txt
tests/beman/lazy/: CMakeLists.txt  allocator_of.test.cpp  allocator_support.test.cpp  any_scheduler.test.cpp  completion.test.cpp  error_types_of.test.cpp  final_awaiter.test.cpp  find_allocator.test.cpp  handle.test.cpp  inline_scheduler.test.cpp  lazy.test.cpp  poly.test.cpp  promise_base.test.cpp  promise_type.test.cpp  result_type.test.cpp  scheduler_of.test.cpp  state_base.test.cpp  sub_visit.test.cpp  task.test.cpp  with_error.test.cpp
tests/beman/task/: CMakeLists.txt  affine_on.test.cpp  allocator_support.test.cpp  any_scheduler.test.cpp  error_types_of.test.cpp  final_awaiter.test.cpp  handle.test.cpp  inline_scheduler.test.cpp  lazy.test.cpp  poly.test.cpp  promise_base.test.cpp  promise_type.test.cpp  result_type.test.cpp  scheduler_of.test.cpp  single_thread_context.test.cpp  state_base.test.cpp  task.test.cpp  task_scheduler.test.cpp
